--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/MainWindow.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/MainWindow.xaml
@@ -74,37 +74,42 @@
                            HorizontalAlignment="Center"
                            FontSize="20"
                            Content="Please enter your username and password"/>
-                    <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
-                        <Label Content="Username" Margin="0,10"/>
-                        <Label Content="Password" Margin="0,10"/>
-                    </StackPanel >
+                        <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
+                            <Label Content="Username" Margin="0,10"/>
+                            <Label Content="Password" Margin="0,10"/>
+                        </StackPanel >
 
-                    <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
-                        <TextBox Name="TbxUsername" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="0" ToolTip="Enter your Username"/>
-                        <PasswordBox Name="TbxPassword" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="1" ToolTip="Enter your Password"/>
-                    </StackPanel>
+                        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
+                            <TextBox Name="TbxUsername" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="0" ToolTip="Enter your Username"/>
+                            <PasswordBox Name="TbxPassword" Grid.Row="1" Grid.Column="1" Height="26" Width="200" Margin="0,10" VerticalContentAlignment="Center" TabIndex="1" ToolTip="Enter your Password"/>
+                        </StackPanel>
 
-                    <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10">
-                         <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="90*"/>
-                                <RowDefinition Height="10*"/>
-                            </Grid.RowDefinitions>
-                            <Button Name="BtnLogin" Content="Login" Height="26" Width="130" TabIndex="2" Grid.Row="0" HorizontalAlignment="Right" Margin="10,10" Click="BtnLogin_Click"/>
-                            <Button Name="BtnCancel" Content="Cancel" Height="26" Width="130" TabIndex="2" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10" Click="BtnCancel_Click"/>
-                            <Label Grid.Row="1" Name="Lbl_ErrorLabel"
-                                   FontSize="20"
+                        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10">
+                            <Grid Width="300">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="19*"/>
+                                    <ColumnDefinition Width="188*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*"/>
+                                    <RowDefinition Height="10*"/>
+                                    <RowDefinition Height="10*"/>
+                                </Grid.RowDefinitions>
+                                <Button Name="BtnLogin" KeyDown="BtnLogin_KeyDown"  Content="Login" Height="26" Width="130" TabIndex="2" Grid.Row="0" HorizontalAlignment="Right" Margin="0,10,4.846,9.526" Click="BtnLogin_Click" Grid.Column="1"/>
+                                <Button Name="BtnCancel" Content="Cancel" Height="26" Width="130" TabIndex="3" Grid.Row="0" HorizontalAlignment="Left" Margin="5,10,0,9.526" Click="BtnCancel_Click" Grid.ColumnSpan="2"/>
+                                <Label Grid.Row="2" Name="Lbl_ErrorLabel"
+                                   FontSize="14"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Invalid username or password"
-                                   Visibility="Hidden"/>
-                          </Grid>
-                    </StackPanel>                        
+                                   Visibility="Collapsed" Grid.ColumnSpan="2" Margin="0,0.474,-0.154,0.227"/>
+                            </Grid>
+                        </StackPanel>
                     </Grid>
                 </StackPanel>
             </Border>
         </DockPanel>
 
-       
+
     </Grid>
 </Window>
