--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/MainDashboard.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/MainDashboard.xaml
@@ -44,7 +44,7 @@
         </StackPanel>
         <!-- Main dashboard menu bar - Attendance enabled by default -->
         <TabControl Name="Tab_MainTabControl" Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Top" FontFamily="Calibri" FontSize="12" FontWeight="Medium">
-            <TabItem Name="Tbi_Attendance" Height="26" Width="100" Header="Attendance" Visibility="Visible" IsSelected="True" MouseLeftButtonUp="Tbi_Attendance_MouseLeftButtonDown" >
+            <TabItem Name="Tbi_Attendance" Height="26" Width="100" Header="Attendance" Visibility="Visible" MouseLeftButtonUp="Tbi_Attendance_MouseLeftButtonDown" >
                 <Grid Background="#FFE5E5E5"/>
              </TabItem>
             <TabItem Name="Tbi_Reporting" Height="26" Width="100" Header="Reports" Visibility="Collapsed" MouseLeftButtonUp="Tbi_Reporting_MouseLeftButtonDown"   >
